<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.LoginScreenActivity"
    tools:layout_editor_absoluteY="81dp">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/picture_lin_layout"
            android:layout_width="wrap_content"
            android:layout_height="255dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/layout"
                tools:layout_height="match_parent"
                android:contentDescription="@string/layout_pic_for_the_login_screen" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/text_lin_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/picture_lin_layout"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            tools:layout_below="@+id/picture_lin_layout">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/e_mail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                tools:paddingTop="20dp"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:paddingTop="20dp"
                tools:targetApi="o" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:gravity="center_vertical|center_horizontal|center"
                android:text="@string/log_in"
                android:focusable="true" />

            <Button
                android:id="@+id/login_change_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:text="@string/no_account_sign_up"
                android:focusable="true" />

        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>